Something went wrong while setting issue due date.
Raven Ridge: ring sdma0 timeout on heavy CSS website with Firefox WebRender
Submitted by Samantha McVey
Assigned to Default DRI bug account
Link to original bug (#108718)
Description
Created attachment 142451
dmesg log
This can replicated every time.
System: Lenovo A485 with 2700U APU
Kernel: 4.20.0-rc2
Steps to replicate:
- Download Firefox Nightly from nightly.mozilla.org
- Open Firefox Nightly
- Type about:config in the address bar and press enter
- Search for gfx.webrender.all in the config search box and double click the "gfx.webrender.all" entry enable it (will show enabled after double clicking)
- Restart Firefox Nightly
- Browse to http://diana-adrianne.com/purecss-francine/ in Firefox Nightly
- Screen should stop responding within a few seconds after zooming/scrolling a bit
Result: Screen will stop responding, though the mouse cursor still moves.
dmesg output:
nov 12 14:42:15 kernel: [drm:amdgpu_job_timedout [amdgpu]] *ERROR* ring sdma0 timeout, signaled seq=20166, emitted seq=20168
nov 12 14:42:15 kernel: [drm] GPU recovery disabled.
nov 12 14:42:35 kernel: [TTM] Buffer eviction failed
**Attachment 142451**, "dmesg log":
2018.11.12-dmesg.txt